--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,10 @@
 }
 
 .grid-item {
-	border: 1px solid salmon;
+	border: 1px solid rgb(189, 189, 189);
 	flex: 1;
+}
+
+.opacity{
+background-color: rgb(0,0,0,0.1)
 }
