--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,7 @@
 }
 
 .grid-container {
+	border: 1px solid salmon;
 	width: 500px;
 	height: 500px;
 	margin-left: 100px;
@@ -12,16 +13,13 @@
 	flex-wrap: wrap;
 }
 
-.div-container {
-	width: 100%;
-	height: 100%;
-}
 
 .grid-item {
-	border: 1px solid rgb(189, 189, 189);
+	/*border: 1px solid rgb(189, 189, 189);*/
 	flex: 1;
+	opacity: var(--grid_opacity, 0);
 }
 
 .opacity{
-background-color: rgb(0,0,0,0.1)
+
 }
