--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,7 @@
 .grid-item {
 	/*border: 1px solid rgb(189, 189, 189);*/
 	flex: 1;
-	opacity: var(--grid_opacity, 0);
+	/*opacity: var(--grid_opacity, 0);*/
 }
 
 .opacity{
